# kaigan

./: Cargo.toml  README.md
src/: lib.rs  types.rs
src/types/: mod.rs  prefix_string.rs  prefix_vec.rs  remainder_str.rs  remainder_vec.rs
