[package]
name = "kaigan"
version = "0.2.5"
description = "Rust companion for Kinobi"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/kaigan"
license = "MIT"
edition = "2021"
readme = "README.md"

[features]
serde = ["dep:serde"]

[dependencies]
borsh = "^0.10"
serde = { version = "1.0", features = ["derive"], optional = true }
