[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Rust companion for Kinobi"
edition = "2021"
license = "MIT"
name = "kaigan"
readme = "README.md"
repository = "https://github.com/metaplex-foundation/kaigan"
version = "0.3.0"

[features]
anchor = ["dep:anchor-lang"]
serde = ["dep:serde"]

[dependencies]
anchor-lang = { version = "0.32.1", optional = true }
borsh_1_5 = { version = "1.5", package = "borsh" }
borsh = { version = "0.10.3" }
serde = { version = "1.0", features = ["derive"], optional = true }
